Fix overflow in 1920px or higher res. p3

--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,7 @@ body {
     height: 40rem;
     color: var(--var-bluedark);
     background-color: var(--var-bluelight);
+    resize: none;
   }
 
   .main-content textarea:focus {
